@@ -58,6 +58,21 @@ $pageUI->addWidget($deleteDialog);
 	    {
 		display: none !important;
 	    }
+
+        @page {
+            size: portrait;
+        }
+
+        body {
+            -webkit-print-color-adjust: exact !important;
+            print-color-adjust: exact !important;
+        }
+
+        .panel-heading {
+            -webkit-print-color-adjust: exact !important;
+            print-color-adjust: exact !important;
+            background-color: #f5f5f5 !important;
+        }
 	    
 	    /*@page {
 		    size: 297mm 210mm;*/ /* landscape */
@@ -754,8 +769,8 @@ HTML_CODE
 $printDialog->setTitle("Imprimir");
 
 $printDialog->setBodyContents(<<<HTML_CODE
-        <p>Dependendo das configurações de impressão do seu navegador, o conteúdo da ficha poderá não ser totalmente legível numa página A4.</p>
-	    <p>Obterá melhores resultados se transferir a ficha e imprimir no Microsoft Word.</p>
+        <p>A página foi automaticamente configurada para otimizar a legibilidade da ficha impressa.</p>
+	    <p>Poderá ainda obter melhores resultados se transferir a ficha e imprimir no Microsoft Word.</p>
 	    
 	    <div class="clearfix" style="margin-bottom: 20px;"></div>
 	    
@@ -788,7 +803,7 @@ $pageUI->renderJS(); // Render the widgets' JS code
         var mywindow = window.open('', 'Ficha', 'height=800,width=600');
         mywindow.document.write('<html><head><title>Ficha</title><link rel="stylesheet" href="css/bootstrap.min.css">\
                                     <link rel="stylesheet" href="css/custom-navbar-colors.css">');
-        mywindow.document.write('<style>@media print{.no-print, .no-print *  {display: none !important; }   .btn { display: none !important; }	}');
+        mywindow.document.write('<style>@media print{.no-print, .no-print *  {display: none !important; }   .btn { display: none !important; } @page { size: portrait; } body { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }	.panel-heading { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; background-color: #f5f5f5 !important; } }');
         mywindow.document.write('@media screen { .only-print, .only-print * { display: none !important;	} } textarea { resize: vertical; }</style>');
         mywindow.document.write('</head><body >');
         mywindow.document.write(data);
